Correction of accentuation in the genres

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,7 @@
             <h1 class="sub-tittle tittle-catalago">Filmes</h1>
             <div class="movies-area">
                 <div class="acao area">
-                    <h4 class="genere">Acao</h4>
+                    <h4 class="genere">Ação</h4>
                     <div class="movies-catalago">
                         <nav class="navbar-movies">
                             <ul>
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="comedia area">
-                    <h4 class="genere">Comedia</h4>
+                    <h4 class="genere">Comédia</h4>
                     <div class="movies-catalago">
                         <nav class="navbar-movies">
                             <ul>
